# oxcms

./: .gitignore  ANALYSIS_V4_PROFILES.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cms-tests/: Cargo.toml
crates/cms-tests/benches/: cms_transform.rs
crates/cms-tests/src/: accuracy.rs  corpus.rs  lib.rs  parity.rs  patterns.rs  reference.rs
crates/cms-tests/tests/: browser_cms_parity.rs  chromatic_adapt_debug.rs  cicp_check.rs  cmyk_cross_cms.rs  cmyk_parity.rs  cmyk_transforms.rs  color_space_tests.rs  colorsync_comparison.rs  corpus_parity.rs  corpus_validation.rs  correctness_evaluation.rs  extended_parity.rs  lcms2_advanced.rs  lcms2_parity.rs  lcms2_profiles_transforms.rs  lcms2_testbed.rs  math_differences.rs  moxcms_matrix_proof.rs  moxcms_parity.rs  moxcms_yellow_bug.rs  named_color_profiles.rs  per_channel_trc.rs  profile_analysis.rs  profile_version_check.rs  qcms_parity.rs  rendering_intents.rs  sm245b_matrix_analysis.rs  transform_trace.rs  trc_bug_hunt.rs  trc_curve_investigation.rs  trc_deep_diagnostic.rs  trc_diagnostic.rs  trc_interpolation_analysis.rs  v4_profile_analysis.md  v4_profile_diagnostics.rs  white_point_investigation.rs  xyb_color_space.rs
crates/oxcms-core/: Cargo.toml  SIMD_ANALYSIS.md
crates/oxcms-core/benches/: transform.rs
crates/oxcms-core/src/: error.rs  lib.rs  profile.rs  transform.rs  types.rs
crates/oxcms-core/src/color/: lab.rs  mod.rs  rgb.rs  white_point.rs  xyb.rs  xyz.rs
crates/oxcms-core/src/icc/: error.rs  header.rs  mod.rs  parser.rs  types.rs
crates/oxcms-core/src/icc/tags/: curves.rs  lut.rs  mod.rs  text.rs  xyz.rs
crates/oxcms-core/src/math/: chromatic_adaptation.rs  gamma.rs  interpolation.rs  matrix.rs  mod.rs
crates/oxcms-core/src/pipeline/: bpc.rs  context.rs  lut.rs  matrix_shaper.rs  mod.rs  stages.rs
crates/oxcms-core/src/simd/: batch.rs  gamma.rs  matrix.rs  mod.rs
crates/skcms-sys/: Cargo.toml  build.rs
crates/skcms-sys/src/: lib.rs
docs/: ARCHITECTURE.md  CODEC_INTEGRATION.md  MATH_DIFFERENCES.md
plans/: IMPLEMENTATION_PLAN.md  ROADMAP.md
scripts/: fetch-test-profiles.sh  run_fuzz.sh
testdata/corpus/mozilla-gtest/: README.md
testdata/corpus/mozilla-pngsuite-gamma/: README.md
testdata/profiles/: LICENSE.md
testdata/profiles/icc.org/: sRGB2014.icc  sRGB_ICC_v4_Appearance.icc  sRGB_v4_ICC_preference.icc
tracking/: DECISIONS.md  FAILING_TESTS.md  IMPLEMENTATION_LOG.md  TEST_STATUS.md
