[workspace]
resolver = "2"
members = [
    "crates/oxcms-core",
    "crates/cms-tests",
    "crates/skcms-sys",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/oxcms"

[workspace.dependencies]
# Core dependencies - using patched local version with relaxed version parsing
moxcms = { path = "external/moxcms" }
lcms2 = "6"
qcms = "0.3"
skcms-sys = { path = "crates/skcms-sys" }

# Color science
palette = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Byte manipulation
bytemuck = { version = "1", features = ["derive"] }

# Random for tests
rand = "0.8"
rand_chacha = "0.3"

# Async
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
